--- a/PHP/设计模式.md
+++ b/PHP/设计模式.md
@@ -410,7 +410,7 @@ $canvas2->draw();
 
 执行结果：
 
-![img](https://images2018.cnblogs.com/blog/1009472/201804/1009472-20180412002250788-449235848.png)
+![img](%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/1009472-20180412002250788-449235848.png)
 
 #### 装饰器模式
 
