--- a/数据结构和算法/数据结构和算法.md
+++ b/数据结构和算法/数据结构和算法.md
@@ -312,6 +312,34 @@ function quickSort($arr)
 1. 大顶堆：每个节点的值都大于或等于其子节点的值，在堆排序算法中用于升序排列；
 2. 小顶堆：每个节点的值都小于或等于其子节点的值，在堆排序算法中用于降序排列；
 
+> 堆排序前传-树与二叉树
+
+```
+树是一种数据结构
+
+树是一种可以递归定义的数据结构
+
+树是有n个节点组成的集合
+
+​	如果n=0，那这是一颗空树
+
+​	如果n>0，那存在一个节点作为树的根节点，其他节点可以分为m个集合，每个集合本身又是一棵树
+```
+
+```
+
+```
+
+
+
+
+
+
+
+
+
+
+
 堆排序的平均时间复杂度为 Ο(nlogn)。
 
 > 算法步骤
