--- a/Laravel/学习笔记/相关插件.md
+++ b/Laravel/学习笔记/相关插件.md
@@ -1,3 +1,9 @@
+# 创建laravel项目
+
+```bash
+composer create-project laravel/laravel project-name --prefer-dist "5.5.*"
+```
+
 # 代码增强提示：laravel-ide-helper
 
 > 安装命令
