--- a/Mysql/索引-腾讯课堂.md
+++ b/Mysql/索引-腾讯课堂.md
@@ -22,12 +22,54 @@
 >
 > 缺陷：1、树的高度太高；2、没有利用好操作系统跟磁盘的交互特性
 
-
+![image-20210316125321466](%E7%B4%A2%E5%BC%95-%E8%85%BE%E8%AE%AF%E8%AF%BE%E5%A0%82/image-20210316125321466.png)
 
 > B-树（多路平衡查找树）
 >
 > 关键字个数 = 子节点 - 1
 
-
+![image-20210316125117528](%E7%B4%A2%E5%BC%95-%E8%85%BE%E8%AE%AF%E8%AF%BE%E5%A0%82/image-20210316125117528.png)
 
 > B+树
+>
+> IO能力强于B树
+>
+> 基于索引结构，扫库能力强于B树
+>
+> 范围查询，叶子节点基于链表排序
+>
+> 查询性能稳定强于B树
+
+![image-20210316125213370](%E7%B4%A2%E5%BC%95-%E8%85%BE%E8%AE%AF%E8%AF%BE%E5%A0%82/image-20210316125213370.png)
+
+
+
+> MyISAM引擎硬盘中存储文件（三个文件.frm .myd .myi）
+>
+> 索引没有主次之分，以同等方式存放在索引文件中
+
+![image-20210316125545211](%E7%B4%A2%E5%BC%95-%E8%85%BE%E8%AE%AF%E8%AF%BE%E5%A0%82/image-20210316125545211.png)
+
+![image-20210316125707179](%E7%B4%A2%E5%BC%95-%E8%85%BE%E8%AE%AF%E8%AF%BE%E5%A0%82/image-20210316125707179.png)
+
+> InnoDB引擎硬盘中存储文件(.frm .ibd) 联合主键也只算一个主键
+
+![image-20210316125904163](%E7%B4%A2%E5%BC%95-%E8%85%BE%E8%AE%AF%E8%AF%BE%E5%A0%82/image-20210316125904163.png)
+
+> 只有一个主键索引为核心，其它都是辅助索引
+
+![image-20210316130216998](%E7%B4%A2%E5%BC%95-%E8%85%BE%E8%AE%AF%E8%AF%BE%E5%A0%82/image-20210316130216998.png)
+
+> 自适应Hash索引
+
+![image-20210316130426907](%E7%B4%A2%E5%BC%95-%E8%85%BE%E8%AE%AF%E8%AF%BE%E5%A0%82/image-20210316130426907.png)
+
+
+
+> 索引的相关重要知识
+
+![image-20210316130806674](%E7%B4%A2%E5%BC%95-%E8%85%BE%E8%AE%AF%E8%AF%BE%E5%A0%82/image-20210316130806674.png)
+
+![image-20210316131135162](%E7%B4%A2%E5%BC%95-%E8%85%BE%E8%AE%AF%E8%AF%BE%E5%A0%82/image-20210316131135162.png)
+
+![image-20210316131607432](%E7%B4%A2%E5%BC%95-%E8%85%BE%E8%AE%AF%E8%AF%BE%E5%A0%82/image-20210316131607432.png)
