--- a/数据结构和算法/数据结构和算法.md
+++ b/数据结构和算法/数据结构和算法.md
@@ -592,6 +592,10 @@ function radixSort($arr, $maxDigit = null)
 
 # 数据结构
 
+> 逻辑结构：集合结构、线性结构、树形结构、图形结构
+>
+> 物理结构：顺序存储结构、链式存储结构
+
 ![img](%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%92%8C%E7%AE%97%E6%B3%95/9825bc315c6034a861d3c26cc51349540923762d)
 
 ## 数组
