--- a/数据结构和算法/数据结构和算法.md
+++ b/数据结构和算法/数据结构和算法.md
@@ -596,7 +596,7 @@ function radixSort($arr, $maxDigit = null)
 
 ## 数组
 
-> 数组是可以再内存中连续存储多个元素的结构，在内存中的分配也是连续的，数组中的元素通过数组下标进行访问，数组下标从0开始。例如下面这段代码就是将数组的第一个元素赋值为 1。
+> 数组是可以在内存中连续存储多个元素的结构，在内存中的分配也是连续的，数组中的元素通过数组下标进行访问，数组下标从0开始。例如下面这段代码就是将数组的第一个元素赋值为 1。
 
 ## 栈
 
