--- a/Redis/常用指令.md
+++ b/Redis/常用指令.md
@@ -25,6 +25,32 @@ SET key value [EX seconds] [PX milliseconds] [NX|XX]
 
 > 因为 [*SET*](http://doc.redisfans.com/string/set.html#set) 命令可以通过参数来实现和 [*SETNX*](http://doc.redisfans.com/string/setnx.html#setnx) 、 [*SETEX*](http://doc.redisfans.com/string/setex.html#setex) 和 [*PSETEX*](http://doc.redisfans.com/string/psetex.html#psetex) 三个命令的效果，所以将来的 Redis 版本可能会废弃并最终移除 [*SETNX*](http://doc.redisfans.com/string/setnx.html#setnx) 、 [*SETEX*](http://doc.redisfans.com/string/setex.html#setex) 和 [*PSETEX*](http://doc.redisfans.com/string/psetex.html#psetex) 这三个命令。
 
+## APPEND
+
+```bash
+APPEND key value
+```
+
+> 如果 `key` 已经存在并且是一个字符串， [APPEND](http://doc.redisfans.com/string/append.html#append) 命令将 `value` 追加到 `key` 原来的值的末尾。
+>
+> 如果 `key` 不存在， [APPEND](http://doc.redisfans.com/string/append.html#append) 就简单地将给定 `key` 设为 `value` ，就像执行 `SET key value` 一样。
+
+## DECR
+
+```bash
+DECR key
+```
+
+> 将 `key` 中储存的数字值减一。
+>
+> 如果 `key` 不存在，那么 `key` 的值会先被初始化为 `0` ，然后再执行 [DECR](http://doc.redisfans.com/string/decr.html#decr) 操作。
+>
+> 如果值包含错误的类型，或字符串类型的值不能表示为数字，那么返回一个错误。
+>
+> 本操作的值限制在 64 位(bit)有符号数字表示之内。
+>
+> 关于递增(increment) / 递减(decrement)操作的更多信息，请参见 [*INCR*](http://doc.redisfans.com/string/incr.html#incr) 命令。
+
 
 
 # 2 Hash（哈希表）
@@ -127,6 +153,84 @@ ZADD key score member [[score member] [score member] ...]
 
 > 在 Redis 2.4 版本以前， [ZADD](http://doc.redisfans.com/sorted_set/zadd.html#zadd) 每次只能添加一个元素。
 
+## ZCARD
+
+```bash
+ZCARD key
+```
+
+> 返回有序集 `key` 的基数。
+
+## ZCOUNT
+
+```bash
+ZCOUNT key min max
+```
+
+> 返回有序集 `key` 中， `score` 值在 `min` 和 `max` 之间(默认包括 `score` 值等于 `min` 或 `max` )的成员的数量。
+>
+> 关于参数 `min` 和 `max` 的详细使用方法，请参考 [*ZRANGEBYSCORE*](http://doc.redisfans.com/sorted_set/zrangebyscore.html#zrangebyscore) 命令。
+
+## ZINCRBY
+
+```bash
+ZINCRBY key increment member
+```
+
+> 为有序集 `key` 的成员 `member` 的 `score` 值加上增量 `increment` 。
+>
+> 可以通过传递一个负数值 `increment` ，让 `score` 减去相应的值，比如 `ZINCRBY key -5 member` ，就是让 `member` 的 `score` 值减去 `5` 。
+>
+> 当 `key` 不存在，或 `member` 不是 `key` 的成员时， `ZINCRBY key increment member` 等同于 `ZADD key increment member` 。
+>
+> 当 `key` 不是有序集类型时，返回一个错误。
+>
+> `score` 值可以是整数值或双精度浮点数。
+
+## ZRANGE
+
+```bash
+ZRANGE key start stop [WITHSCORES]
+```
+
+> 返回有序集 `key` 中，指定区间内的成员。
+>
+> 其中成员的位置按 `score` 值递增(从小到大)来排序。
+>
+> 具有相同 `score` 值的成员按字典序([lexicographical order](http://en.wikipedia.org/wiki/Lexicographical_order) )来排列。
+>
+> 如果你需要成员按 `score` 值递减(从大到小)来排列，请使用 [*ZREVRANGE*](http://doc.redisfans.com/sorted_set/zrevrange.html#zrevrange) 命令。
+>
+> 下标参数 `start` 和 `stop` 都以 `0` 为底，也就是说，以 `0` 表示有序集第一个成员，以 `1` 表示有序集第二个成员，以此类推。
+>
+> 你也可以使用负数下标，以 `-1` 表示最后一个成员， `-2` 表示倒数第二个成员，以此类推。
+>
+> 超出范围的下标并不会引起错误。
+>
+> 比如说，当 `start` 的值比有序集的最大下标还要大，或是 `start > stop` 时， [ZRANGE](http://doc.redisfans.com/sorted_set/zrange.html#zrange) 命令只是简单地返回一个空列表。
+>
+> 另一方面，假如 `stop` 参数的值比有序集的最大下标还要大，那么 Redis 将 `stop` 当作最大下标来处理。
+>
+> 可以通过使用 `WITHSCORES` 选项，来让成员和它的 `score` 值一并返回，返回列表以 `value1,score1, ..., valueN,scoreN` 的格式表示。
+>
+> 客户端库可能会返回一些更复杂的数据类型，比如数组、元组等。
+
+## ZRANGEBYSCORE
+
+```bash
+ZRANGEBYSCORE key min max [WITHSCORES] [LIMIT offset count]
+```
+
+> 返回有序集 `key` 中，所有 `score` 值介于 `min` 和 `max` 之间(包括等于 `min` 或 `max` )的成员。有序集成员按 `score` 值递增(从小到大)次序排列。
+>
+> 具有相同 `score` 值的成员按字典序([lexicographical order](http://en.wikipedia.org/wiki/Lexicographical_order))来排列(该属性是有序集提供的，不需要额外的计算)。
+>
+> 可选的 `LIMIT` 参数指定返回结果的数量及区间(就像SQL中的 `SELECT LIMIT offset, count` )，注意当 `offset` 很大时，定位 `offset` 的操作可能需要遍历整个有序集，此过程最坏复杂度为 O(N) 时间。
+>
+> 可选的 `WITHSCORES` 参数决定结果集是单单返回有序集的成员，还是将有序集成员及其 `score` 值一起返回。
+>
+> 该选项自 Redis 2.0 版本起可用。
+
 
 
 ------
@@ -204,6 +308,14 @@ KEYS pattern
 > 特殊符号用 `\` 隔开
 
 > [KEYS](http://doc.redisfans.com/key/keys.html#keys) 的速度非常快，但在一个大的数据库中使用它仍然可能造成性能问题，如果你需要从一个数据集中查找特定的 `key` ，你最好还是用 Redis 的集合结构(set)来代替。
+
+## TYPE
+
+```bash
+TYPE key
+```
+
+> 返回 `key` 所储存的值的类型。
 
 
 
