--- a/数据结构和算法/数据结构和算法.md
+++ b/数据结构和算法/数据结构和算法.md
@@ -598,34 +598,94 @@ function radixSort($arr, $maxDigit = null)
 
 ![img](%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%92%8C%E7%AE%97%E6%B3%95/9825bc315c6034a861d3c26cc51349540923762d)
 
-## 数组
+## 线性表
+
+> 线性表是最基本、最简单、也最常用的一种数据结构。一个线性表是n个具有相同特性的数据元素的有限序列。
+>
+> 前驱元素：若A元素在B元素的前面，则成A为B的前驱元素
+>
+> 后继元素：
+>
+> 若B元素在A元素的后面，则成B为A的后继元素
+>
+> **特征**：数据元素之间具有一种“一对一”的逻辑关系
+>
+> 1、第一个数据元素没有前驱，这个数据元素被称为头节点；
+>
+> 2、最后一个元素没有后继、这个元素被称为尾节点
+>
+> 3、除了第一个和最后一个元素外，其它数据元素有且仅有一个前驱和一个后继
+>
+> **分类**：线性表中数据存储的方式可以是顺序存储，也可以是链式存储，按照数据的存储方式不同，可以把线性表分为顺序表和链表。
+
+### 数组(顺序表)
 
 > 数组是可以再内存中连续存储多个元素的结构，在内存中的分配也是连续的，数组中的元素通过数组下标进行访问，数组下标从0开始。例如下面这段代码就是将数组的第一个元素赋值为 1。
 
-## 栈
+> 顺序表是在计算机内存中以数组的形式保存的线性表，线性表的顺序存储是指用一组地址连续的存储单元，依次存储线性表中的各个元素、使得线性表中在逻辑结构上相邻的数据元素存储在相邻的物理存储单元中，即通过数据元素物理存储的相邻关系来反应数据元素之间逻辑上的相邻关系
+
+### 链表
+
+> 链表是物理存储单元上非连续的、非顺序的存储结构，数据元素的逻辑顺序是通过链表的指针地址实现，每个元素包含两个结点，一个是存储元素的数据域 (内存空间)，另一个是指向下一个结点地址的指针域。根据指针的指向，链表能形成不同的结构，例如单链表，双向链表，循环链表等。 
+
+> 之前使用顺序存储结构实现了线性表，发现虽然顺序表的查询呵快，时间复杂度为O(1)，但是增删的效率是比较低的，因为每一次增删操作都伴随着大量的数据移动。可以使用两位一种存储实现线性表，链式存储结构。
+>
+> 链表是一种物理存储单元上非连续，非顺序的存储结构，其物理结构不能直观的表示数据元素的逻辑顺序，数据元素的逻辑顺序是通过链表中的指针链接次序实现的。链表有一系列的结点组成，节点可以在运行时动态生成。
+
+### 栈
 
 > 栈是一种特殊的线性表，仅能在线性表的一端操作，栈顶允许操作，栈底不允许操作。 栈的特点是：先进后出，或者说是后进先出，从栈顶放入元素的操作叫入栈，取出元素叫出栈。 
 
-## 队列
+> 栈是一种基于先进后出（FILO）的数据结构，是一种只能在一段进行插入和删除操作的特殊线性表。他按照先进后出的原则存储数据，先进的数据被压入栈底，最后的数据在栈顶，需要读数据的时候从栈顶开始弹出数据（最后一个数据被第一个读出来）
+
+### 队列
 
 > 队列与栈一样，也是一种线性表，不同的是，队列可以在一端添加元素，在另一端取出元素，也就是：先进先出。从一端放入元素的操作称为入队，取出元素为出队。
-
-## 链表
-
-> 链表是物理存储单元上非连续的、非顺序的存储结构，数据元素的逻辑顺序是通过链表的指针地址实现，每个元素包含两个结点，一个是存储元素的数据域 (内存空间)，另一个是指向下一个结点地址的指针域。根据指针的指向，链表能形成不同的结构，例如单链表，双向链表，循环链表等。 
 
 ## 树
 
 > 树是一种数据结构，它是由n（n>=1）个有限节点组成一个具有层次关系的集合。把它叫做 “树” 是因为它看起来像一棵倒挂的树，也就是说它是根朝上，而叶朝下的。
 
-## 散列表
+> 树是计算机中非常重要的一种数据结构，同时使用树这种数据结构，可以描述生活中的很多事物。
+>
+> 树是由n(n>=1)个有限节点组成一个具有层次关系的集合，把它叫做树是因为它看起来像一颗倒挂的树，也就是说它是根朝上，而叶朝下的。
+>
+> **特点**：
+>
+> 1、每个节点有零个或者多个子结点
+>
+> 2、没有父结点的结点为根结点
+>
+> 3、每一个非根结点只有一个父结点
+>
+> 4、每个节点及其后代结点整体上可以看做是一颗树，称为当前结点的父结点的一个子树
+
+### 二叉树
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+### 散列表
 
 > 散列表，也叫哈希表，是根据关键码和值 (key和value) 直接进行访问的数据结构，通过key和value来映射到集合中的一个位置，这样就可以很快找到集合中的对应元素。
 
-## 堆
+### 堆
 
 > 堆是一种比较特殊的数据结构，可以被看做一棵树的数组对象，具有以下的性质：堆中某个节点的值总是不大于或不小于其父节点的值；堆总是一棵完全二叉树。将根节点最大的堆叫做最大堆或大根堆，根节点最小的堆叫做最小堆或小根堆。常见的堆有二叉堆、斐波那契堆等。
 
-## 图 
+### 图
 
 > 图是由结点的有穷集合V和边的集合E组成。其中，为了与树形结构加以区别，在图结构中常常将结点称为顶点，边是顶点的有序偶对，若两个顶点之间存在一条边，就表示这两个顶点具有相邻关系。
