--- a/数据结构和算法/数据结构和算法.md
+++ b/数据结构和算法/数据结构和算法.md
@@ -660,6 +660,40 @@ function radixSort($arr, $maxDigit = null)
 >
 > 4、每个节点及其后代结点整体上可以看做是一颗树，称为当前结点的父结点的一个子树
 
+> **结点的度**
+>
+> 一个结点含有的子树的个数称为该结点的度
+>
+> **叶结点**
+>
+> 度为0的结点称为叶结点，也可以就叫做终端结点
+>
+> **分支结点**
+>
+> 度不为0的结点称为分支结点，也可以叫做非终端结点
+>
+> **结点的层次**
+>
+> 从根结点开始，根结点的层次为1分的直接后继层次为2，以此类推
+>
+> **结点的层序编号**
+>
+> 将树种的结点按照从上层到下层，同层从左到右的次序拍成一个线性序列，把他们编成连续的自然数
+>
+> **树的度**
+>
+> 树中搜游结点的度的最大值
+>
+> **树的高度（深度）**
+>
+> 树中结点的最大层次
+>
+> **森林**
+>
+> m(m>=0)个互不相交的树的集合，将一颗非空树的根结点山区，树就变成一个森林；给森林增加一个统一的根结点，森林就变成一棵树
+
+
+
 ### 二叉树
 
 
