--- a/数据结构和算法/数据结构和算法.md
+++ b/数据结构和算法/数据结构和算法.md
@@ -691,11 +691,32 @@ function radixSort($arr, $maxDigit = null)
 > **森林**
 >
 > m(m>=0)个互不相交的树的集合，将一颗非空树的根结点山区，树就变成一个森林；给森林增加一个统一的根结点，森林就变成一棵树
-
-
+>
+> **孩子结点**
+>
+> 一个结点的直接后继结点称为该 结点的孩子结点
+>
+> **父结点**
+>
+> 一个结点的直接前驱称为该结点的双亲结点
+>
+> **兄弟结点**
+>
+> 同一双亲结点的孩子结点间互称兄弟结点
 
 ### 二叉树
 
+> 二叉树就是度不超过2的树（每个结点最多有两个子节点）
+
+> **满二叉树**
+>
+> 一个二叉树，如果每一个层的结点树都达到最大值，则这个二叉树就是满二叉树
+
+> **完全二叉树**
+>
+> 叶结点只能出现在最下层次和次下层，并且最下面一层的结点都集中在该层最左边的若干位置的二叉树
+
+### 二叉查找树
 
 
 
@@ -709,17 +730,14 @@ function radixSort($arr, $maxDigit = null)
 
 
 
-
-
-
-### 散列表
+# 散列表
 
 > 散列表，也叫哈希表，是根据关键码和值 (key和value) 直接进行访问的数据结构，通过key和value来映射到集合中的一个位置，这样就可以很快找到集合中的对应元素。
 
-### 堆
+# 堆
 
 > 堆是一种比较特殊的数据结构，可以被看做一棵树的数组对象，具有以下的性质：堆中某个节点的值总是不大于或不小于其父节点的值；堆总是一棵完全二叉树。将根节点最大的堆叫做最大堆或大根堆，根节点最小的堆叫做最小堆或小根堆。常见的堆有二叉堆、斐波那契堆等。
 
-### 图
+# 图
 
 > 图是由结点的有穷集合V和边的集合E组成。其中，为了与树形结构加以区别，在图结构中常常将结点称为顶点，边是顶点的有序偶对，若两个顶点之间存在一条边，就表示这两个顶点具有相邻关系。
