树-红黑树-B树-B+树

--- a/数据结构和算法/数据结构和算法.md
+++ b/数据结构和算法/数据结构和算法.md
@@ -716,7 +716,39 @@ function radixSort($arr, $maxDigit = null)
 >
 > 叶结点只能出现在最下层次和次下层，并且最下面一层的结点都集中在该层最左边的若干位置的二叉树
 
-### 二叉查找树
+#### 二叉查找树
+
+### 平衡树
+
+#### 2-3树
+
+#### 红黑树
+
+#### B-树
+
+> B树是一种树状数据结构，它能够存储数据、对其进行排序并允许以O(logn)的时间复杂度进行查找、顺序读取、插入和删除等操作
+
+> **B树的特征**
+>
+> B树中允许一个结点中包含多个key，并不确定，需要看具体的实现。如果确定一个参数M来构造一个B树，可以把这个树称为M阶的B树，那么该书会有以下特点：
+>
+> 每个结点最多有M-1的key，并且以升序排列；
+>
+> 每个结点最多能有M个子结点；
+>
+> 根结点至少有两个子结点；
+
+![image-20210323125416558](%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%92%8C%E7%AE%97%E6%B3%95/image-20210323125416558.png)
+
+> 在实际应用中B树的 阶数一般都比较大（通常大于100），所以，即使存储大量的数据，B树的高度仍然比较小，这样再某些应用场景下，就可以体现出它的优势
+
+> **B树存储数据**
+>
+> 
+
+> **B树在磁盘文件中的应用**
+>
+> 在程序中，不可避免的需要通过IO操作文件。而我们的文件是存储在磁盘上的。计算机操作磁盘上的文件是通过文件系统进行操作的，在文件系统中就使用到了B树这种数据结构 
 
 
 
