--- a/数据结构和算法/数据结构和算法.md
+++ b/数据结构和算法/数据结构和算法.md
@@ -592,9 +592,23 @@ function radixSort($arr, $maxDigit = null)
 
 # 数据结构
 
-> 逻辑结构：集合结构、线性结构、树形结构、图形结构
+> **逻辑结构**
 >
-> 物理结构：顺序存储结构、链式存储结构
+> 集合结构、线性结构、树形结构、图形结构
+
+> **物理结构**
+>
+> 逻辑结构在计算机中真正的表示方式（又称为映像），称为物理结构，也可以叫做存储结构。常见的物理结构有顺序存储结构、链式存储结构。
+>
+> 顺序存储结构：
+>
+> 把数据元素放到地址连续的存储单元里面，其数据间的逻辑关系和物理关系是一致的，比如我们常用的数组就是顺序存储结构，比如常用的数组就是顺序存储结构。
+>
+> 顺序存储结构存在一定的弊端
+>
+> 链式存储结构：
+>
+> 是把数据元素存放在任意的存储单元里面，这组存储单元可以是连续的也可以是不连续的。此时，数据元素之间并不能反映元素间的逻辑关系，因此在链式存储结构中引进了一个指针存放数据元素的地址，这样通过地址就可以找到相关数据元素的位置
 
 ![img](%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%92%8C%E7%AE%97%E6%B3%95/9825bc315c6034a861d3c26cc51349540923762d)
 
@@ -602,7 +616,9 @@ function radixSort($arr, $maxDigit = null)
 
 > 线性表是最基本、最简单、也最常用的一种数据结构。一个线性表是n个具有相同特性的数据元素的有限序列。
 >
-> 前驱元素：若A元素在B元素的前面，则成A为B的前驱元素
+> 前驱元素：
+>
+> 若A元素在B元素的前面，则成A为B的前驱元素
 >
 > 后继元素：
 >
@@ -620,7 +636,7 @@ function radixSort($arr, $maxDigit = null)
 
 ### 数组(顺序表)
 
-> 数组是可以再内存中连续存储多个元素的结构，在内存中的分配也是连续的，数组中的元素通过数组下标进行访问，数组下标从0开始。例如下面这段代码就是将数组的第一个元素赋值为 1。
+> 数组是可以在内存中连续存储多个元素的结构，在内存中的分配也是连续的，数组中的元素通过数组下标进行访问，数组下标从0开始。例如下面这段代码就是将数组的第一个元素赋值为 1。
 
 > 顺序表是在计算机内存中以数组的形式保存的线性表，线性表的顺序存储是指用一组地址连续的存储单元，依次存储线性表中的各个元素、使得线性表中在逻辑结构上相邻的数据元素存储在相邻的物理存储单元中，即通过数据元素物理存储的相邻关系来反应数据元素之间逻辑上的相邻关系
 
@@ -716,7 +732,7 @@ function radixSort($arr, $maxDigit = null)
 >
 > 叶结点只能出现在最下层次和次下层，并且最下面一层的结点都集中在该层最左边的若干位置的二叉树
 
-#### 二叉查找树
+### 二叉查找树
 
 ### 平衡树
 
