--- a/ES6/前端工程化/前端模块化.md
+++ b/ES6/前端工程化/前端模块化.md
@@ -99,6 +99,7 @@ module.exports = {
 - 静态资源请求效率低
 - 模块化支持不友好
 - 浏览器对高级Javascript特性兼容程度低
+- ![image-20210330124958614](%E5%89%8D%E7%AB%AF%E6%A8%A1%E5%9D%97%E5%8C%96/image-20210330124958614.png)
 
 # 08.webpack的基本使用
 
