--- a/操作系统/兄弟连Linux/6 软件包管理/6.2.2 rpm命令管理-安装升级与卸载.md
+++ b/操作系统/兄弟连Linux/6 软件包管理/6.2.2 rpm命令管理-安装升级与卸载.md
@@ -2,7 +2,7 @@
 
 包全名：操作的包是没有安装的软件包时，使用包全名。而且要注意路径
 
-包名：操作已经安装到额软件包时，使用包名。是搜索/vatr/lib/rpm中的数据库
+包名：操作已经安装到额软件包时，使用包名。是搜索/var/lib/rpm中的数据库
 
 2、RPM安装
 
