--- a/ES6/前端工程化/前端模块化.md
+++ b/ES6/前端工程化/前端模块化.md
@@ -1,4 +1,4 @@
-# 01.前端工程化学习目标
+01.前端工程化学习目标
 
 
 
@@ -99,23 +99,64 @@ module.exports = {
 - 静态资源请求效率低
 - 模块化支持不友好
 - 浏览器对高级Javascript特性兼容程度低
+
 - ![image-20210330124958614](%E5%89%8D%E7%AB%AF%E6%A8%A1%E5%9D%97%E5%8C%96/image-20210330124958614.png)
+- 
 
 # 08.webpack的基本使用
 
 **1、创建列表隔行变色项目**
 
-> 1、新建项目空白麟，并运行npm init -y命令，初始化包管理配置文件package.json
+> 1、新建项目空白目录，并运行npm init -y命令，初始化包管理配置文件package.json
+>
+> 2、新建src源代码目录
+>
+> 3、新建src->index.html首页
+>
+> 4、初始化首页基本的结构
+>
+> 5、运行npm install jquery -S命令，安装jQuery
+>
+> 6、通过模块化的形式，实现隔行变色效果
 
 
 
+# 09.在项目中安装和配置webpack
 
+## 2.2 webpack的基本使用
 
+**2.在项目中安装和配置webpack**
 
+> 1、运行npm install webpack webpack-cli -D命令，安装webpack相关的包
+>
+> 2、在项目根目录中，创建名为webpack.config.js的webpack配置文件
+>
+> 3、在webpack的配置文件中，初始化如下基本配置
 
+```javascript
+module.exports = {
+    mode:'development' // 用来指定构建模式
+}
+```
 
+> 4、在package.json配置文件中的scripts节点下，新增dev脚本如下
 
+```javascript
+"scripts":{
+    "dev":"webpack" // 节点下的脚本，可以通过npm run安装
+}
+```
 
+> 5、在终端中运行npm run dev命令，启动webpack进行项目打包
+
+# 10.配置打包的出口与入口
+
+**3.配置打包的出口与入口**
+
+webpack 的 4.x版本中默认约定：
+
+- 打包的入口文件问src->index.js
+- 打包的输出文件问dist->main.js
 
 
 
