--- a/ES6/前端工程化/前端模块化.md
+++ b/ES6/前端工程化/前端模块化.md
@@ -158,6 +158,15 @@ webpack 的 4.x版本中默认约定：
 - 打包的入口文件问src->index.js
 - 打包的输出文件问dist->main.js
 
+如果要修改打包的入口与出口，可以在webpack.config.js中新增如下配置信息：
+
+```javascript
+const path = require('path') // 导入node.js中专门操作路径的模块
+module.exports = {
+	entry:path.join(__dirname,'./src/index.js')，// dab
+}
+```
+
 
 
 
