--- a/PHP/未理解函数.md
+++ b/PHP/未理解函数.md
@@ -118,3 +118,38 @@ array_diff_ukey($strArray, $indexArray, function ($a, $b) {
 > GRFs===0
 > Affsd===0
 > ASd===0
+
+
+
+# array_reduce
+
+> 用回调函数迭代地将数组简化为单一的值
+
+> ### 说明
+>
+> [mixed](mk:@MSITStore:C:\Users\0\Desktop\离线文档\php_enhanced_zh.chm::/res/language.pseudo-types.html#language.types.mixed) **array_reduce**    ( array `$array`   , [callable](mk:@MSITStore:C:\Users\0\Desktop\离线文档\php_enhanced_zh.chm::/res/language.types.callable.html) `$callback`   [, [mixed](mk:@MSITStore:C:\Users\0\Desktop\离线文档\php_enhanced_zh.chm::/res/language.pseudo-types.html#language.types.mixed) `$initial` = **`NULL`**  ] )
+>
+> **array_reduce()** 将回调函数    `callback` 迭代地作用到    `array` 数组中的每一个单元中，从而将数组简化为单一的值。      
+>
+> ### 参数
+>
+> - `array`
+>
+>    输入的 array。       
+>
+> - `callback`
+>
+>    [mixed](mk:@MSITStore:C:\Users\0\Desktop\离线文档\php_enhanced_zh.chm::/res/language.pseudo-types.html#language.types.mixed) callback        ( [mixed](mk:@MSITStore:C:\Users\0\Desktop\离线文档\php_enhanced_zh.chm::/res/language.pseudo-types.html#language.types.mixed) `$carry`       , [mixed](mk:@MSITStore:C:\Users\0\Desktop\离线文档\php_enhanced_zh.chm::/res/language.pseudo-types.html#language.types.mixed) `$item`       )`carry`携带上次迭代里的值；       如果本次迭代是第一次，那么这个值是 `initial`。       `item`携带了本次迭代的值。          
+>
+> - `initial`
+>
+>    如果指定了可选参数    `initial`，该参数将在处理开始前使用，或者当处理结束，数组为空时的最后一个结果。       
+>
+> ### 返回值
+>
+>    返回结果值。   
+>
+> `initial` 参数，**array_reduce()** 返回 **`NULL`**。 
+
+
+
