--- a/技术学习计划.md
+++ b/技术学习计划.md
@@ -17,3 +17,5 @@ laravel
 https://learnku.com/articles/6504/laravel-cross-domain-solution
 
 https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Overview
+
+tokyo drift
