--- a/PHP/设计模式.md
+++ b/PHP/设计模式.md
@@ -1,6 +1,6 @@
-#### 单例模式
+# 单例模式
 
-1. $_instance必须声明为静态的私有变量
+1. # $_instance必须声明为静态的私有变量
 2. 构造函数和析构函数必须声明为私有,防止外部程序new 类从而失去单例模式的意义
 3. getInstance()方法必须设置为公有的,必须调用此方法 以返回实例的一个引用
 4. ::操作符只能访问静态变量和静态函数
@@ -14,7 +14,7 @@
 
 
 
-#### 工厂模式
+# 工厂模式
 
 工厂模式，工厂方法或者类生成对象，而不是在代码中直接new。 
 使用工厂模式，可以避免当改变某个类的名字或者方法之后，在调用这个类的所有的代码中都修改它的名字或者参数
@@ -59,7 +59,7 @@ function autoload1($class){
 
 
 
-#### 注册模式
+# 注册模式
 
 注册模式，解决全局共享和交换对象。已经创建好的对象，挂在到某个全局可以使用的数组上，在需要使用的时候，直接从该数组上获取即可。将对象注册到全局的树上。任何地方直接去访问。
 
@@ -83,7 +83,7 @@ class Register
 }
 ```
 
-#### 适配器模式
+# 适配器模式
 
 将各种截然不同的函数接口封装成统一的API。 
 PHP中的数据库操作有MySQL,MySQLi,PDO三种，可以用适配器模式统一成一致，使不同的数据库操作，统一成一样的API。类似的场景还有cache适配器，可以将memcache,redis,file,apc等不同的缓存函数，统一成一致。 
@@ -183,7 +183,7 @@ function query($sql)
 
 通过以上案例，PHP与MySQL的数据库交互有三套API，在不同的场景下可能使用不同的API，那么开发好的代码，换一个环境，可能就要改变它的数据库API，那么就要改写所有的代码，使用适配器模式之后，就可以使用统一的API去屏蔽底层的API差异带来的环境改变之后需要改写代码的问题。
 
-#### 策略模式
+# 策略模式
 
 策略模式，将一组特定的行为和算法封装成类，以适应某些特定的上下文环境。 
 eg：假如有一个电商网站系统，针对男性女性用户要各自跳转到不同的商品类目，并且所有的广告位展示不同的广告。在传统的代码中，都是在系统中加入各种if else的判断，硬编码的方式。如果有一天增加了一种用户，就需要改写代码。使用策略模式，如果新增加一种用户类型，只需要增加一种策略就可以。其他所有的地方只需要使用不同的策略就可以。 
@@ -273,7 +273,7 @@ $page->index();
 实现依赖倒置和控制反转 *（有待理解）* 
 通过接口的方式，使得类和类之间不直接依赖。在使用该类的时候，才动态的传入该接口的一个实现类。如果要替换某个类，只需要提供一个实现了该接口的实现类，通过修改一行代码即可完成替换。
 
-#### 观察者模式
+# 观察者模式
 
 1：观察者模式(Observer)，当一个对象状态发生变化时，依赖它的对象全部会收到通知，并自动更新。 
 2：场景:一个事件发生后，要执行一连串更新操作。传统的编程方式，就是在事件的代码之后直接加入处理的逻辑。当更新的逻辑增多之后，代码会变得难以维护。这种方式是耦合的，侵入式的，增加新的逻辑需要修改事件的主体代码。 
@@ -338,7 +338,7 @@ $event->notify();
 
 当某个事件发生后，需要执行的逻辑增多时，可以以松耦合的方式去增删逻辑。也就是代码中的红色部分，只需要定义一个实现了观察者接口的类，实现复杂的逻辑，然后在红色的部分加上一行代码即可。这样实现了低耦合。
 
-#### 原型模式
+# 原型模式
 
 原型模式（对象克隆以避免创建对象时的消耗） 
 1：与工厂模式类似，都是用来创建对象。 
@@ -412,7 +412,7 @@ $canvas2->draw();
 
 ![img](%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/1009472-20180412002250788-449235848.png)
 
-#### 装饰器模式
+# 装饰器模式
 
 1：装饰器模式，可以动态的添加修改类的功能 
 2：一个类提供了一项功能，如果要在修改并添加额外的功能，传统的编程模式，需要写一个子类继承它，并重写实现类的方法 
