--- a/技术学习计划.md
+++ b/技术学习计划.md
@@ -18,4 +18,4 @@ https://learnku.com/articles/6504/laravel-cross-domain-solution
 
 https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Overview
 
-tokyo drift
+copilot
