--- a/Git/常用命令.md
+++ b/Git/常用命令.md
@@ -69,3 +69,70 @@ git reset --hard HEAD~n 回退n个版本
 git reset --hard 版本id 跳到某个版本
 ```
 
+
+
+文件恢复
+
+```shell
+工作区中的文件删除
+git status
+
+On branch st1
+Changes not staged for commit:
+  (use "git add/rm <file>..." to update what will be committed)
+  (use "git restore <file>..." to discard changes in working directory)
+        deleted:    git02.txt
+
+no changes added to commit (use "git add" and/or "git commit -a")
+
+git restore filename 恢复工作区被删除的文件
+git checkout filename 从版本仓库检出被删除的文件
+```
+
+
+
+文件删除
+
+```shell
+工作区删除文件
+git status
+
+On branch st1
+Changes not staged for commit:
+  (use "git add/rm <file>..." to update what will be committed)
+  (use "git restore <file>..." to discard changes in working directory)
+        deleted:    git02.txt
+
+no changes added to commit (use "git add" and/or "git commit -a")
+
+删除版本库文件
+git add filename
+git commit -m "message"
+
+git rm filename
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
