--- a/Git/常用命令.md
+++ b/Git/常用命令.md
@@ -114,6 +114,28 @@ git rm filename
 
 
 
+本地分支操作
+
+```shell
+# 切换到分支
+git checkout branchname
+
+# 新建分支并切换到新建分支
+git checkout -b newbranch
+
+# 删除指定分支
+git branch -d branch
+
+# 查看所有分支，并且*号标记当前所在的分支
+git branch
+
+# 合并分支
+git merge branch
+
+# 重命名分支，如果newbranch名字分支已经存在，则需要使用-M强制重命名，否组，使用-m进行重命名
+git branch -m|-M oldbranch newbranch
+```
+
 
 
 
