--- a/Git/常用命令.md
+++ b/Git/常用命令.md
@@ -138,6 +138,17 @@ git branch -m|-M oldbranch newbranch
 
 
 
+缓存指令
+
+```shell
+# 从缓存中恢复已修改缓存的文件
+git stash apply stash@{n} 
+
+git stash save ‘说明信息’
+
+git stash drop [stash]
+```
+
 
 
 
