--- a/PHP/文件操作.md
+++ b/PHP/文件操作.md
@@ -53,3 +53,48 @@
 ### 递归遍历目录
 
 > 递归遍历目录：指定一个目录的情况下，将其下的所有文件和目录，及其目录内部的所有内容都输出出来。
+
+
+
+## 文件操作
+
+### PHP5常见文件操作函数
+
+> 1) file_get_contents()
+>
+> 2) file_set_contnets()
+
+### PHP4常见文件操作函数
+
+> 1) fopen()
+>
+> 2) fread()
+>
+> 3) fwrite()
+>
+> 4) fclose()
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
