--- a/技术学习计划.md
+++ b/技术学习计划.md
@@ -1,4 +1,12 @@
-# 前端：
+# z前端：
+
+js
+
+vue
+
+vue-cli
+
+vur-route
 
 axios
 
@@ -10,9 +18,13 @@ axios
 
 # 后端：
 
-laravel
+laravel57
 
+laravel8
 
+tp6
+
+hypref
 
 https://learnku.com/articles/6504/laravel-cross-domain-solution
 
