--- a/Laravel/入门到精通/数据库与 Eloquent 模型/入门篇（三）：通过填充器快速填充测试数据.md
+++ b/Laravel/入门到精通/数据库与 Eloquent 模型/入门篇（三）：通过填充器快速填充测试数据.md
@@ -26,13 +26,9 @@ php artisan db:seed --class=UsersTableSeeder
 $this->call(UsersTableSeeder::class);
 ```
 
+你可以使用 Artisan 命令 db:seed 来填充数据库了。默认情况下，db:seed 命令将运行 DatabaseSeeder 类，这个类可以用来调用其它 Seed 类。不过，你也可以使用 --class 选项来指定一个特定的 seeder 类，这样，就可以一次性调用所有填充器啦。
 
-
-这样，就可以一次性调用所有填充器啦。
-
-当然，你也可以通过 `--class=` 选项指定运行某个填充器类的 `run` 方法。
-
-此外，在某些时候，你可能希望在运行迁移命令的同时填充测试数据，尤其是在初始化一些演示项目的时候。这可以通过不指定值的 `--seed` 选项来实现：
+此外，在某些时候，你可能希望在运行迁移命令的同时填充测试数据，尤其是在初始化一些演示项目的时候。这可以通过指定值的 `--seed` 选项来实现：
 
 ```php
 php artisan migrate --seed 
