--- a/Laravel/入门到精通/数据库与 Eloquent 模型/入门篇（二）：通过迁移文件定义数据表结构.md
+++ b/Laravel/入门到精通/数据库与 Eloquent 模型/入门篇（二）：通过迁移文件定义数据表结构.md
@@ -266,6 +266,22 @@ php artisan migrate:reset
 
 
 
+```php
+# 新建迁移文件migration
+php artisan make:migration create_users_table
+# 运行迁移文件
+php artisan migrate
+    
+# 创建填充文件
+php artisan make:seeder UserTableSeeder
+# 运行填充文件
+php artisan db:seed #不指定类名时，运行DatabaseSeeder
+php artisan db:seed --class=UserSeeder #指定类名时则执行指定的填充文件   
+
+# 创建工厂
+php artisan make:factory ArticleFactory
+```
+
 
 
 
