--- a/JAVA/3.面向对象.md
+++ b/JAVA/3.面向对象.md
@@ -6,6 +6,30 @@
 
 ## 构造器
 
+```java
+/*
+	类的结构之三：构造器（或构造方法、construct）的使用
+	
+	一、构造器作用
+	1、创建对象
+	2、初始化对象属性
+	
+	二、说明：
+	1、如果没有显式地定义类的构造器的话，则系统默认提供一个空参的构造器
+	2、定义构造器的格式，权限修饰符 类名（形参列表）{}
+	3、一个类中定义的多个构造器，彼此构成重载
+	4、一旦显式地定义了类的构造器之后，系统就不再提供默认的空参构造器
+	5、构造器的修饰符跟类的修饰符一致
+
+
+
+
+*/
+
+```
+
+
+
 ## 代码块
 
 ## 内部类
@@ -15,6 +39,20 @@
 # 类的特征
 
 ## 封装
+
+```java
+/*
+ * 面向对象的特征一：封装与隐藏
+ *
+ * 三、封装性的体现，需要权限修饰符来配合
+ *  1、Java规定的4中权限：private、缺省、protected、public
+ *  2、4种权限可以用来修饰类及类的内部结构：属性、方法、构造器、内部类
+ *  3、具体的，4种权限都可以用来修饰类的内部结构：属性、方法、构造器、内部类
+ *          修饰类的话，只能用：缺省、public
+ */
+```
+
+
 
 ## 继承
 
@@ -27,6 +65,36 @@
 
 
 # 类的关键字
+
+## this
+
+> this可以调用构造器
+>
+> this()
+
+## package
+
+> 一、package关键字的使用
+>
+> 1、为了更好地事先项目中类的管理，提供包的概念
+>
+> 2、使用package声明类或者接口所属的包，声明在源文件的首行
+>
+> 3、包，属于标识符，遵循标识符的命名规则、规范、见名知意
+>
+> 4、每点一次，就代表一层文件目录
+
+## import
+
+> 二、import关键字的使用
+>
+> 1、在源文件中显式地使用import结构导入指定包下的类、接口
+>
+> 2、声明在包的生命和类的声明之间
+>
+> 3、如果需要导入多个结构，并列即可
+>
+> 4、可以使用xxx.*的方式，标识可以导入xxx包下的所有结构
 
 ## static
 
