--- a/JAVA/3.面向对象.md
+++ b/JAVA/3.面向对象.md
@@ -95,6 +95,16 @@
 > 3、如果需要导入多个结构，并列即可
 >
 > 4、可以使用xxx.*的方式，标识可以导入xxx包下的所有结构
+>
+> 5、可以省略lang包导入
+>
+> 6、如果使用的类或接口是本包下定义的，则可以省略import结构
+>
+> 7、使用不同包名下的同名的类，则必须至少又一个类需要以全类名的方式显式
+>
+> 8、
+>
+> 9、import static：导入指定类或接口中的静态结构
 
 ## static
 
